@@ -1,3 +1,12 @@
+2002-04-04  Geoffrey Keating  <geoffk@redhat.com>
+
+	* varasm.c (struct weak_syms): Use GGC, gengtype.
+	(mark_weak_decls): Delete.
+	(weak_decls): Likewise.
+	(add_weak): Likewise.
+	(remove_from_pending_weak_list): Likewise.
+	(init_varasm_once): Likewise.
+
 2002-03-12  Geoffrey Keating  <geoffk@redhat.com>
 
 	* Makefile.in (gtype-desc.o): Add libfuncs.h dependency.
